--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "p2pcam",
   "name": "p2pcam",
-  "documentation": "https://www.home-assistant.io/components/p2pcam",
-  "requirements": ["p2pcam==0.0.2"],
+  "documentation": "https://github.com/devmlb/home-assistant-p2pcam",
+  "requirements": [],
   "dependencies": [],
   "codeowners": []
 }
